wouldnt let me pull without another commit

--- a/AngularApp/src/index.html
+++ b/AngularApp/src/index.html
@@ -11,7 +11,7 @@
   <body>
     
     <section class="wrapper">
-      <div class="top">Calender</div>
+      <div class="top">Calend3r</div>
       <div class="bottom" aria-hidden="true">Calender</div>
     </section>
   </body>
