Revert "changing AngularApp to non standalone in order to use calendar stuff"
This reverts commit 2a1807fca0420bb441aacd6b497aace8e5289562.

--- a/AngularApp/src/index.html
+++ b/AngularApp/src/index.html
@@ -1,22 +1,5 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-  <head>
-    <meta charset="utf-8" />
-    <title>CalenderApp</title>
-    <link rel="stylesheet" href="styles.css">
-    <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" href="img/calender.jpeg" />
-  </head>
-  <body>
-    
-    <section class="wrapper">
-      <div class="top">Calend3r</div>
-      <div class="bottom" aria-hidden="true">Calender</div>
-    </section>
-  </body>
-=======
 <head>
   <meta charset="utf-8">
   <title>AngularApp</title>
@@ -27,5 +10,4 @@
 <body>
   <app-root></app-root>
 </body>
->>>>>>> 2a1807fca0420bb441aacd6b497aace8e5289562
 </html>
